--- a/styles/style.css
+++ b/styles/style.css
@@ -1,44 +1,75 @@
 * {
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: gray;
+  background-color: gray;
 }
 
 h2 {
-    color: black;
-    text-align: center;
-    font-size: 40px;
-    margin-bottom: 30px;
+  color: black;
+  text-align: center;
+  font-size: 40px;
+  margin-bottom: 30px;
 }
 
-.calculator{
-    background-color: black;
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    margin: auto;
+.calculator {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+  margin: auto;
+  border-radius: 5px;
+  gap: 15px;
+  border: 10px solid white;
 }
 
-.row{
-    display: flex;
-    width: 300px;
+.row {
+  justify-content: center;
+  display: flex;
+  width: 100%;
+  gap: 5px;
+}
+.buttonscontainer {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.button{
-    background-color: white;
-    width: 100px;
-    height: 90px;
-    color: black;
-    text-align: center;
-    border: 5px solid blue;
+.button {
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #171717;
+  width: 80px;
+  height: 80px;
+  color: white;
+  text-align: center;
+  border-radius: 50%;
+}
+.button.operator {
+  color: #6dd144;
+}
+.button.equal {
+    background-color: #6DD144;
+    color: white;
+}
+.button.clear{
+    color: #E17064;
 }
 
 .screen {
-    background-color: red;
-    width: 300px;
-    height: 120px;
+  background-color: #171717;
+  width: 95%;
+  height: 120px;
+  color: white;
+  margin: auto;
+  border-radius: 5px;
 }
