--- a/styles/style.css
+++ b/styles/style.css
@@ -60,14 +60,14 @@ h2 {
   color: #6dd144;
 }
 .button.equal {
-    background-color: #6DD144;
-    color: white;
-    width: 165px;
-    height: 80px;
-    border-radius: 10%;
+  background-color: #6dd144;
+  color: white;
+  width: 165px;
+  height: 80px;
+  border-radius: 10%;
 }
-.button#clear{
-    color: #E17064;
+.button#clear {
+  color: #e17064;
 }
 
 #screen {
@@ -85,7 +85,7 @@ h2 {
   padding: 8px;
 }
 
-.togglecontainer{
+.togglecontainer {
   display: flex;
   flex-direction: column;
 }
@@ -93,23 +93,15 @@ h2 {
 #display {
   font-size: 24px;
   padding: 8px;
-  height: 100%
+  height: 100%;
 }
-
-
-
-
-
-
-
-
 
 /* this css was taken from w3school source: https://www.w3schools.com/howto/howto_css_switch.asp */
 
 /* The switch - the box around the slider */
 .switch {
   position: relative;
-  display: inline-block;  
+  display: inline-block;
   width: 50px;
   height: 24px;
 }
@@ -130,8 +122,8 @@ h2 {
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .slider:before {
@@ -142,16 +134,16 @@ h2 {
   left: 4px;
   bottom: 4px;
   background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: #2196f3;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px #2196f3;
 }
 
 input:checked + .slider:before {
