--- a/styles/style.css
+++ b/styles/style.css
@@ -9,12 +9,70 @@ body {
 }
 
 h2 {
-  color: black;
+  color: white;
   text-align: center;
   font-size: 40px;
   margin-bottom: 30px;
 }
+.boxnote span {
+  color: red;
+}
+.tutorialcontainer {
+  overflow: auto;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+}
+.closebutton {
+  background-color: red;
+  color: white;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.openbutton {
+  background-color: green;
+  color: white;
+  border-radius: 50%;
+  position: absolute;
+  left: 20px;
+  top: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 10px;
+}
+.boxnote {
+  max-width: 450px;
+  width: 90%;
+  padding: 20px 20px;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 10px;
+}
 
+.togglemodecontainer {
+  position: absolute;
+  left: 25px;
+  top: 70px;
+}
 .calculator {
   padding-top: 10px;
   padding-bottom: 10px;
@@ -30,6 +88,15 @@ h2 {
   border: 10px solid white;
 }
 
+.calculator.light {
+  background-color: white;
+  color: #4e4d52;
+  border: 10px solid black;
+}
+.calculator.light .button {
+  background-color: #dbdbe3;
+  color: #4e4d52;
+}
 .row {
   align-items: center;
   justify-content: space-evenly;
@@ -160,3 +227,4 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
