--- a/styles/style.css
+++ b/styles/style.css
@@ -162,6 +162,23 @@ h2 {
   padding: 8px;
   height: 100%;
 }
+@media only screen and (max-width: 768px) {
+  .openbutton {
+    position: static;
+    width: fit-content;
+  }
+
+  .togglemodecontainer {
+    position: static;
+  }
+}
+
+
+
+
+
+
+
 
 /* this css was taken from w3school source: https://www.w3schools.com/howto/howto_css_switch.asp */
 
